<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.greenbotsite.uiGimmicks.MainActivity">


    <Button
        android:id="@+id/btn_anim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/animation_demo" />

    <Button
        android:id="@+id/btn_shared_transition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shared_transition" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_fragment_shared_transition"
        android:text="@string/fragment_shared_transition"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_circular_reveal"
        android:text="@string/circular_reveal"/>


    <Button
        android:id="@+id/btn_vector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vector_demo" />

    <Button
        android:id="@+id/btn_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customview_demo" />

    <Button
        android:id="@+id/btn_scene_transition"
        android:text="@string/scene_transition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
