<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/shared_imageview"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/food"
        android:transitionName="@string/shared_transition_image" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/food_description"
        android:transitionName="@string/shared_transition_desc" />

    <Button
        android:id="@+id/btn_startTransition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/start_transition" />

</LinearLayout>