<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:scaleType="centerCrop"
        android:id="@+id/shared_imageview"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:src="@drawable/food"
        android:transitionName="@string/shared_transition_image" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/food_description"
        android:transitionName="@string/shared_transition_desc" />


</LinearLayout>